fixed transparent background of contact icons and spacing. condensed some of the CSS

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    list-style-type: none;
 }
 
 body {
@@ -16,6 +17,12 @@ body {
     background-color: #fff7e0;
 }
 
+a {
+    text-decoration: none;
+    font-weight: 800;
+}
+
+/* HEADER */
 header {
     padding: 15px;
     background-color: #ffecb7;
@@ -43,8 +50,7 @@ h1 {
 .nav-buttons {
     display: flex;
     justify-content: space-between;
-    list-style-type: none;
-    font-weight: bolder;
+    gap: 15px;
 }
 
 .nav-buttons li {
@@ -52,45 +58,31 @@ h1 {
     font-size: 20px;
 }
 
-a {
-    text-decoration: none;
-}
-
-/* need to make a container to make this work so it bounces within the container
-https://blog.hubspot.com/website/css-hover-animation
-https://codepen.io/halink0803/pen/qdVXqm */
-/* @keyframes bounce {
-    0%   { transform: translateY(0); }
-     50%  { transform: translateY(-50px); }
-    100% { transform: translateY(0); }
-} */
-
-/* personally, I don't like when the colors change, so this is to keep them uniform */
-.nav-buttons a:link {
+/* personally, I don't like when link colours change so this is to keep them uniform */
+a:link {
     color: var(--main-font-color);
 }
 
-.nav-buttons a:visited {
+a:visited {
     color: var(--main-font-color);
 }
 
 /* when hovering over navigation links, raccoons come help locate which link you're hovering over and the colour changes */
-.nav-buttons a:hover {
+a:hover {
     color: #7F9C96;
-    /* animation-name: bounce;
-    animation-duration: 3s; */
 }
 
-.nav-buttons a:hover::before {
+/* project images do not get raccys around them, but the other text links do */
+a:not(.boxes a):hover::before {
     content: var(--raccys);
 }
 
-.nav-buttons a:hover::after {
+a:not(.boxes a):hover::after {
     content: var(--raccys);
 }
 
 /* when clicking on a link, a shadow appears under the selected link */
-.nav-buttons a:active {
+a:active {
     text-shadow: 2px 3px 3px orange;
 }
 
@@ -103,6 +95,7 @@ figure {
     border-radius: 0 0 20px 20px;
 }
 
+/* MAIN */
 section {
     height: 20%;
     padding: 30px;
@@ -127,6 +120,7 @@ section h2 {
     border-radius: 15px 0 0 15px;
 }
 
+/* Section 1: ABOUT ME */
 section p {
     padding: 30px;
 }
@@ -138,6 +132,7 @@ section p {
     object-fit: cover;
 }
 
+/* Section 2: PROJECTS */
 #projects {
     padding: 55px 30px 40px;
 }
@@ -148,7 +143,6 @@ section p {
     justify-content: space-evenly;
     align-items: center;
     align-content: space-around;
-    list-style-type: none;
     gap: 40px;
 
 }
@@ -178,6 +172,7 @@ section p {
 
 .boxes img:active {
     box-shadow: var(--active-shadow);
+    transform: rotate(5deg);
 }
 
 .proj-caption {
@@ -199,6 +194,10 @@ section p {
     content: var(--raccys);
 }
 
+.proj-caption:active {
+    transform: rotate(5deg);
+}
+
 /* makes the first project box bigger */
 .boxes:first-child {
     width: 100%;
@@ -217,9 +216,35 @@ section p {
     padding-top: 12%;
 }
 
+/* Section 3: CONTACT INFO */
+.contact-methods {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+    width: 100%;
+}
+
+.contact-icon {
+    text-align: center;
+    display: block;
+}
+
+.contact-icon img{
+    width: 50px;
+    height: 50px;
+}
+
+/* FOOTER */
+footer {
+    text-align: center;
+}
+
+
 /* for screens with a display of 600px width or smaller */
 @media screen and (max-width: 600px) {
-    /* headers and navigation bar stack */
+
+    /* headers and navigation bar STACK */
     header {
         display: block;
         text-align: center;
@@ -265,7 +290,7 @@ section p {
         left: 6%;
     }
 
-    /* makes the first project box bigger */
+    /* make the first project box bigger */
     .boxes:first-child {
         margin-top: 35px;
         width: 100%;
@@ -282,5 +307,13 @@ section p {
         position: static;
         text-align: center;
         padding-top: 12%;
+    }
+
+    /* aligns the contact icons better */
+    .contact-methods {
+        margin-top: 15px;
+        justify-content: space-evenly;
+        align-content: space-around;
+        gap: 15px;
     }
 }
